docs-archive/apache-airflow-providers-facebook/3.7.0/_sources/_api/airflow/providers/facebook/ads/hooks/ads/index.rst.txt
airflow.providers.facebook.ads.hooks.ads
========================================

.. py:module:: airflow.providers.facebook.ads.hooks.ads

.. autoapi-nested-parse::

   This module contains Facebook Ads Reporting hooks.



Classes
-------

.. autoapisummary::

   airflow.providers.facebook.ads.hooks.ads.JobStatus
   airflow.providers.facebook.ads.hooks.ads.FacebookAdsReportingHook


Module Contents
---------------

.. py:class:: JobStatus

   Bases: :py:obj:`enum.Enum`


   Available options for facebook async task status.


   .. py:attribute:: COMPLETED
      :value: 'Job Completed'



   .. py:attribute:: STARTED
      :value: 'Job Started'



   .. py:attribute:: RUNNING
      :value: 'Job Running'



   .. py:attribute:: FAILED
      :value: 'Job Failed'



   .. py:attribute:: SKIPPED
      :value: 'Job Skipped'



.. py:class:: FacebookAdsReportingHook(facebook_conn_id = default_conn_name, api_version = None)

   Bases: :py:obj:`airflow.hooks.base.BaseHook`


   Facebook Ads API.

   .. seealso::
       For more information on the Facebook Ads API, take a look at the API docs:
       https://developers.facebook.com/docs/marketing-apis/

   :param facebook_conn_id: Airflow Facebook Ads connection ID
   :param api_version: The version of Facebook API. Default to None. If it is None,
       it will use the Facebook business SDK default version.



   .. py:attribute:: conn_name_attr
      :value: 'facebook_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'facebook_default'



   .. py:attribute:: conn_type
      :value: 'facebook_social'



   .. py:attribute:: hook_name
      :value: 'Facebook Ads'



   .. py:attribute:: facebook_conn_id
      :value: 'facebook_default'



   .. py:attribute:: api_version
      :value: None



   .. py:attribute:: client_required_fields
      :value: ['app_id', 'app_secret', 'access_token', 'account_id']



   .. py:property:: multiple_accounts
      :type: bool


      Check whether provided account_id in the Facebook Ads Connection is provided as a list.



   .. py:property:: facebook_ads_config
      :type: dict


      Get the ``facebook_ads_config`` attribute.

      This fetches Facebook Ads connection from meta database, and sets the
      ``facebook_ads_config`` attribute with returned config file.



   .. py:method:: bulk_facebook_report(params, fields, sleep_time = 5)

      Pull data from Facebook Ads API regarding Account ID with matching return type.

      The return type and value depends on the ``account_id`` configuration. If the
      configuration is a str representing a single Account ID, the return value is the
      list of reports for that ID. If the configuration is a list of str representing
      multiple Account IDs, the return value is a dict of Account IDs and their
      respective list of reports.

      :param fields: List of fields that is obtained from Facebook. Found in AdsInsights.Field class.
          https://developers.facebook.com/docs/marketing-api/insights/parameters/v6.0
      :param params: Parameters that determine the query for Facebook
          https://developers.facebook.com/docs/marketing-api/insights/parameters/v6.0
      :param sleep_time: Time to sleep when async call is happening

      :return: Facebook Ads API response,
          converted to Facebook Ads Row objects regarding given Account ID type



